new_lineage_panel/src/styles.module.scss
$node-width: 272px;

.table_node {
  width: $node-width;
  display: flex;
  flex-direction: column;
  cursor: default;
  color: var(--text-color);

  .header {
    background: var(--table-node-expand-bg);
    border-top: 2px solid var(--table-node-border-color);
    border-left: 2px solid var(--table-node-border-color);
    border-right: 2px solid var(--table-node-border-color);
    border-radius: 0.25em 0.25em 0 0;
    padding: 0.25em;
    &.collapse {
      background: var(--table-node-collapse-bg);
      border-bottom: 2px solid var(--table-node-border-color);
      border-radius: 0.25em;
    }
    &.selected {
      border-color: #e38e00;
    }
  }

  .content {
    flex-grow: 1;
    background: var(--table-node-content-bg);
    border-bottom: 2px solid var(--table-node-border-color);
    border-left: 2px solid var(--table-node-border-color);
    border-right: 2px solid var(--table-node-border-color);
    border-radius: 0 0 0.25em 0.25em;
    padding: 0.25em;
    &.selected {
      border-color: #e38e00;
    }
  }
}

@mixin node_type_color($c) {
  border: 1px solid rgba($c, 0.3);
  color: $c;
  background-color: rgba($c, 0.1);
}

.table_header {
  display: grid;
  grid-template-columns: 3.2em 1fr;
  gap: 0em 0.5em;
  width: 100%;
  height: 3.2em;
  align-items: center;
  border-radius: 0.25em;
  border: 1px solid var(--table-node-border-color);

  .seed {
    @include node_type_color(#01cd8c);
  }

  .model {
    @include node_type_color(#cae8f9);
  }

  .source {
    @include node_type_color(#bce2e4);
  }

  .exposure {
    @include node_type_color(#f1b497);
  }

  .snapshot {
    @include node_type_color(#f5c5f0);
  }

  .metrics {
    @include node_type_color(#c7f3c0);
  }

  .macros {
    @include node_type_color(#dd9da5);
  }

  .analysis {
    @include node_type_color(#ff8488);
  }

  .node_icon {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0.15em 0.5em;
    border-radius: 0.25em;

    svg {
      $size: 2em;
      width: $size;
      height: $size;
    }
    font-size: 0.75em;
  }
}

$size: 1.2em;
.table_handle {
  width: $size;
  height: $size;
  line-height: $size;
  border-radius: 50%;
  background-color: var(--primary-accent);
  border: 1px solid #d6e7ff;
  color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: end;
  cursor: default;
}

.see_more_node {
  width: $node-width;
  display: flex;
  background: var(--table-node-collapse-bg);
  border: 1px solid var(--table-node-border-color);
  border-radius: 0.5em;
  padding: 0.5em;
  cursor: default;
  color: var(--text-color);
}

.table_card {
  width: 100%;
  overflow-x: hidden;
  border-radius: 0.25em;
  padding: 0.25em;
  border: 1px solid var(--card-border-color);
  cursor: pointer;
  background-color: var(--card-bg);
  &.selected {
    border-color: #e38e00;
  }
  &.disabled {
    background-color: #e5e6e7;
    cursor: default;
  }
}

.column_card {
  display: flex;
  flex-direction: column;
  gap: 0.5em;
  border-radius: 0.6em;
  padding: 0.8em;
  border: 1px solid var(--card-border-color);
  background-color: var(--card-bg);
  &.selected {
    border-color: #e38e00;
  }
}

.edit_icon {
  $size: 1.2rem;
  width: $size;
  height: $size;
  color: #8390a3;
  &:hover {
    color: var(--primary-accent);
  }
  &.active {
    color: var(--primary-accent);
  }
}

.expand_lineage_icon {
  $size: 1rem;
  background-color: var(--primary-accent);
  padding: 0.25rem;
  border-radius: 0.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
  svg {
    width: $size;
    height: $size;
  }
}

.processing_div {
  background-color: #ffffff;
  .gif_img {
    max-width: 100%;
    max-height: 90%;
  }
}

.card {
  box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
  background-color: #ffffff;
  border-radius: 0.5rem;
  padding: 0.5rem;
}

.column_node {
  border: 1px solid var(--primary-accent);
  width: calc($node-width - 24px);
  border-radius: 0.25em;
  padding: 4px 8px;
  color: var(--column-node-color);
  position: relative;
  &.default {
    background: var(--column-node-bg);
  }

  .column_name {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
  }

  .column_top_right {
    position: absolute;
    top: -6px;
    right: 4px;
    display: flex;
    gap: 0.25rem;
  }

  .column_code_icon {
    background-color: #082247 !important;
    padding: 2px;
    width: 12px;
    height: 12px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 6px;
    cursor: pointer;
  }
}

.divider {
  height: 2px;
  width: 100%;
  background-color: var(--card-border-color);
}

.table_details_header {
  width: 100%;
  display: grid;
  grid-template-columns: 1.5rem 1fr;
  gap: 0em 0.5em;
  align-items: center;
}

.verticle_divider {
  width: 2px;
  background-color: #c4cad2;
}

.low_confidence {
  padding: 0.125em 0.75em;
  border-radius: 0.375rem;
  background: #ff754c;
  color: white;
}

.high_confidence {
  padding: 0.125em 0.75em;
  border-radius: 0.375rem;
  background: #327e36;
  color: white;
}

.alert_icon {
  width: 1rem;
  height: 1rem;
  display: flex;
}

.menu_card {
  padding: 0.275em !important;
  font-size: 0.875em;
}

.menu_card_container {
  background-color: var(--card-bg) !important;
  border-color: var(--card-border-color) !important;
  color: var(--text-color) !important;
}

.table_details_tabs {
  width: 100%;
  padding: 0.25em;
  border-radius: 0.5em;
  display: flex;
  background-color: var(--column-section-bg);

  .tab {
    width: 100%;
    padding: 0.5em;
    border-radius: 0.5em;
    color: var(--text-color);
    text-align: center;
    cursor: pointer;

    &.selected {
      background-color: var(--primary-accent);
      color: #ffffff;
    }
  }
}

.table_node_pill {
  display: flex;
  align-items: center;
  border-radius: 0.5em;
  gap: 0.25em;
  padding: 0.125em 0.325em;
  font-size: 0.8em;
  background-color: var(--tag-bg);
  color: var(--text-color);

  .icon {
    $size: 1rem;
    width: $size;
    height: $size;
    display: flex;
    align-items: center;
  }
}

.node-checkbox {
  display: flex;
  align-items: start;
  gap: 0.5em;
  padding: 0.125em 0.5em;
  border-radius: 0.5em;
}

.select_node_checkbox {
  @extend .node-checkbox;
  border: 2px solid var(--card-border-color);
}

.non_select_node_checkbox {
  @extend .node-checkbox;
  border: 2px dashed var(--card-border-color);
}

.node_extra_info {
  height: 1.6em;
}

.help_body {
  color: var(--text-grey2-color);
}

.feedback_body {
  color: var(--text-grey2-color);

  .cancel_btn {
    color: var(--text-grey-color);
    text-decoration: none;
  }
}

.expand_nav {
  border-radius: 4px;
  border: var(--table-node-border-color) solid 1px;
  display: flex;
  align-items: center;
  background-color: var(--bg-color);
  color: var(--text-color);

  .expand_nav_btn {
    background-color: var(--popover-bg);
    border-radius: 4px;
    margin: 0.125em;
    display: flex;
    align-items: center;

    .divider {
      height: 1.75em;
      width: 1px;
      background-color: var(--divider-color);
    }

    .icon {
      svg {
        width: 1.5em;
        height: 1.5em;
      }
      padding: 0.125em;
      cursor: pointer;
    }
  }

  &.disabled {
    opacity: 0.5;

    .icon {
      cursor: default;
    }
  }
}

.model_views_type {
  padding: 0.5rem;
  background-color: var(--column-section-bg);
  border-radius: 6px;
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.close_button {
  background-color: var(--primary-accent);
  padding: 0.5rem;
  position: absolute;
  top: 0;
  right: 0;
  cursor: pointer;
  svg {
    width: 1rem;
    height: 1rem;
  }
}

.op_node {
  width: 3.2rem;
  height: 3.2rem;
  padding: 0.3rem;
  border-radius: 50%;
  border: 2px solid var(--table-node-border-color);
  display: flex;
  justify-content: center;
  align-items: center;

  &.light_mode {
    background-color: #eaf3ff;
  }

  &.dark_mode {
    background-color: #d3e5ff;
  }
}

.op_type_text {
  position: absolute;
  left: 3.6rem;
  color: var(--primary-accent);
  height: 3.2rem;
  display: flex;
  align-items: center;
}

.static_table_node {
  width: $node-width;
  display: flex;
  flex-direction: column;
  cursor: default;
  color: var(--text-color);

  .header {
    background: var(--table-node-expand-bg);
    border-top: 2px solid var(--table-node-border-color);
    border-left: 2px solid var(--table-node-border-color);
    border-right: 2px solid var(--table-node-border-color);
    border-radius: 0.25em 0.25em 0 0;
    &.collapse {
      background: var(--table-node-collapse-bg);
      border-bottom: 2px solid var(--table-node-border-color);
      border-radius: 0.25em;
    }
    &.selected {
      border-color: #e38e00;
    }
  }

  .node_icon {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 0.25rem;
    margin-bottom: 0.25rem;

    svg {
      $size: 2.8rem;
      width: $size;
      height: $size;
    }
  }

  .content {
    flex-grow: 1;
    background: var(--table-node-content-bg);
    border-bottom: 2px solid var(--table-node-border-color);
    border-left: 2px solid var(--table-node-border-color);
    border-right: 2px solid var(--table-node-border-color);
    border-radius: 0 0 0.25em 0.25em;
    padding: 0.25em;
    &.selected {
      border-color: #e38e00;
    }
  }

  .details_btn {
    border-radius: 50%;
    width: 1.25rem;
    height: 1.25rem;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0.2rem;

    &.enable {
      background-color: var(--primary-accent);
      cursor: pointer;
      color: #ffffff;
    }

    &.disable {
      background-color: var(--btn-disable);
      color: var(--btn-disable-text);
      cursor: not-allowed;
    }
  }
}

